apply plugin: 'com.android.application'
apply plugin: 'me.tatarka.retrolambda'

android {
    compileSdkVersion 24
    buildToolsVersion '23.0.2'

    defaultConfig {
        applicationId "examples.quickprogrammingtips.com.tablayout"
        minSdkVersion 21
        targetSdkVersion 24
        versionCode 1
        versionName "1.1"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    retrolambda {
        jdk '/usr/lib/jvm/java-8-oracle'
    }


}
repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
    flatDir {
        dirs 'libs'
    }

}
dependencies {
    compile fileTree(include: ['*.jar'], dir: 'libs')
    compile 'org.jsoup:jsoup:1.7.3'
    compile 'com.squareup.retrofit:retrofit:1.9.0'
    compile 'com.android.support:appcompat-v7:24.1.1'
    compile 'com.android.support:design:24.1.1'
    compile 'io.reactivex:rxjava:1.1.6'
    compile 'io.reactivex:rxandroid:1.2.1'
    //compile 'org.apache.commons:commons-lang3:3.4'
    //compile 'com.android.support:support-v4:24.1.1'
    // This library handles authentication and authorization
    //compile 'com.spotify.sdk:spotify-auth:1.0.0-beta12@aar'
    // This library handles music playback
    //compile 'com.spotify.sdk:spotify-player:1.0.0-beta12@aar'
    compile 'com.github.satyan:sugar:1.5'
    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
}
